--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://moozay:Iaj1k5Caey6MZ9oe@cluster0.ht2eq.mongodb.net/scolaire?retryWrites=true&w=majorityr;
+MONGODB_URL = 'mongodb+srv://moozay:Iaj1k5Caey6MZ9oe@cluster0.ht2eq.mongodb.net/scolaire?retryWrites=true&w=majorityr'
