--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = mongodb+srv://moozay:Iaj1k5Caey6MZ9oe@cluster0.ht2eq.mongodb.net/scolaire?retryWrites=true&w=majorityr
+MONGODB_URL = 'mongodb+srv://moozay:Iaj1k5Caey6MZ9oe@cluster0.ht2eq.mongodb.net/scolaire?'
 
 SESSION_SECRET = secret
